fixing other test views adjusting page spacing/rhythm

--- a/less/forms.less
+++ b/less/forms.less
@@ -392,6 +392,10 @@ select:focus:invalid {
   .clearfix(); // Adding clearfix to allow for .pull-right button containers
 }
 
+.form-actions:last-child {
+  margin-bottom: 0;
+}
+
 
 
 // HELP TEXT
