--- a/less/hero-unit.less
+++ b/less/hero-unit.less
@@ -24,3 +24,7 @@
     line-height: @baseLineHeight * 1.5; // Reset since we specify in type.less
   }
 }
+
+.hero-unit:first-child {
+  margin-top: 30px;
+}
