--- a/less/layouts.less
+++ b/less/layouts.less
@@ -8,6 +8,10 @@
   .container-fixed();
 }
 
+.navbar-fixed-top + .container {
+  margin-top: 30px;
+}
+
 // Fluid layouts (left aligned, with sidebar, min- & max-width content)
 .container-fluid {
   padding-right: @gridGutterWidth;
