--- a/less/type.less
+++ b/less/type.less
@@ -74,8 +74,8 @@ h1,
 h2,
 h3 { line-height: @baseLineHeight * 2; }
 
-h1 { font-size: @baseFontSize * 2.75; } // ~38px
-h2 { font-size: @baseFontSize * 2.25; } // ~32px
+h1 { font-size: @baseFontSize * 2.50; } // ~38px
+h2 { font-size: @baseFontSize * 2.00; } // ~32px
 h3 { font-size: @baseFontSize * 1.75; } // ~24px
 h4 { font-size: @baseFontSize * 1.25; } // ~18px
 h5 { font-size: @baseFontSize; }
@@ -91,9 +91,12 @@ h4 small { font-size: @baseFontSize; }
 // -------------------------
 
 .page-header {
-  padding-bottom: (@baseLineHeight / 2) - 1;
-  margin: @baseLineHeight 0 (@baseLineHeight * 1.5);
-  border-bottom: 1px solid @grayLighter;
+  padding-bottom: (@baseLineHeight / 4) - 1;
+  margin: (@baseLineHeight * 2) 0 (@baseLineHeight * 1.5);
+  border-bottom: 1px solid darken(@grayLight, 10%);
+  h1 {
+    margin-bottom: (@baseLineHeight / 8);
+  }
 }
 
 
