--- a/out.css
+++ b/out.css
@@ -7,6 +7,13 @@
  *
  * Designed and built with all the love in the world @twitter by @mdo and @fat.
  */
+@font-face {
+  font-family: 'Avant Garde Medium';
+  src: url('font/avant_garde_medium.eot');
+  src: url('font/avant_garde_medium.eot?#iefix') format('embedded-opentype'), url('font/avant_garde_medium.otf') format('otf'), url('font/avant_garde_medium.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 .clearfix {
   *zoom: 1;
 }
@@ -538,6 +545,9 @@ a:focus {
 .container:after {
   clear: both;
 }
+.navbar-fixed-top + .container {
+  margin-top: 30px;
+}
 .container-fluid {
   padding-right: 20px;
   padding-left: 20px;
@@ -624,8 +634,8 @@ h4,
 h5,
 h6 {
   margin: 10px 0;
-  font-family: inherit;
-  font-weight: bold;
+  font-family: "Avant Garde Medium", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: normal;
   line-height: 20px;
   color: inherit;
   text-rendering: optimizelegibility;
@@ -646,10 +656,10 @@ h3 {
   line-height: 40px;
 }
 h1 {
-  font-size: 38.5px;
+  font-size: 35px;
 }
 h2 {
-  font-size: 31.5px;
+  font-size: 28px;
 }
 h3 {
   font-size: 24.5px;
@@ -676,9 +686,12 @@ h4 small {
   font-size: 14px;
 }
 .page-header {
-  padding-bottom: 9px;
-  margin: 20px 0 30px;
-  border-bottom: 1px solid #eeeeee;
+  padding-bottom: 4px;
+  margin: 40px 0 30px;
+  border-bottom: 1px solid #808080;
+}
+.page-header h1 {
+  margin-bottom: 2.5px;
 }
 ul,
 ol {
@@ -1405,6 +1418,9 @@ select:focus:invalid:focus {
 }
 .form-actions:after {
   clear: both;
+}
+.form-actions:last-child {
+  margin-bottom: 0;
 }
 .help-block,
 .help-inline {
@@ -3744,6 +3760,7 @@ input[type="submit"].btn.btn-mini {
   display: block;
   padding: 10px 20px 10px;
   margin-left: -20px;
+  font-family: "Avant Garde Medium", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 20px;
   font-weight: 200;
   color: #999999;
@@ -3754,11 +3771,13 @@ input[type="submit"].btn.btn-mini {
   text-decoration: none;
 }
 .navbar-text {
+  font-family: "Avant Garde Medium", "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin-bottom: 0;
   line-height: 40px;
   color: #999999;
 }
 .navbar-link {
+  font-family: "Avant Garde Medium", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #999999;
 }
 .navbar-link:hover,
@@ -3904,6 +3923,7 @@ input[type="submit"].btn.btn-mini {
   margin-right: 0;
 }
 .navbar .nav > li {
+  font-family: "Avant Garde Medium", "Helvetica Neue", Helvetica, Arial, sans-serif;
   float: left;
 }
 .navbar .nav > li > a {
@@ -5254,6 +5274,7 @@ a.badge:focus {
 }
 .hero-unit h1 {
   margin-bottom: 0;
+  font-family: "Avant Garde Medium", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 60px;
   line-height: 1;
   color: inherit;
@@ -5261,6 +5282,9 @@ a.badge:focus {
 }
 .hero-unit li {
   line-height: 30px;
+}
+.hero-unit:first-child {
+  margin-top: 30px;
 }
 .pull-right {
   float: right;
